# judiciary-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  main.py  pyproject.toml
.agents/skills/uniapp/: SKILL.md
.gitea/workflows/: deploy.yml
.github/workflows/: deploy.yml
admin-html/: README.md  map-dashboard.html
admin-html/api/: api-client.js
admin-html/js/: config.js  map-dashboard.js  tailwind-config.js
judicial_system/: manage.py
judicial_system/apps/cases/: admin.py  apps.py  models.py  resources.py  serializers.py  urls.py  views.py
judicial_system/apps/common/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
judicial_system/apps/content/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
judicial_system/apps/grids/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
judicial_system/apps/users/: admin.py  apps.py  models.py  resources.py  serializers.py  urls.py
judicial_system/config/: admin_custom.py  admin_sites.py  asgi.py  middleware.py  urls.py  wsgi.py
judicial_system/config/settings/: __init__.py  base.py  development.py  (+1 more)
judicial_system/db_scripts/: 01_基础信息.py  02_资源信息.py  03_任务信息.py  db_scripts_content.py
judicial_system/judicial_system/: asgi.py  settings.py  urls.py  wsgi.py
judicial_system/utils/: admin_mixins.py  attachment_utils.py  authentication.py  code_generator.py  exceptions.py  file_utils.py  geo_utils.py  pagination.py  permissions.py  responses.py  tencent_map.py  token_manager.py  url_utils.py  validators.py
(+49 files in other folders)
