[project]
name = "judiciary-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==4.2",
    "djangorestframework==3.14.0",
    "django-filter==23.5",
    "django-cors-headers==4.3.1",
    "django-simpleui>=2023.0",
    "python-json-logger>=2.0.7",
    "django-ckeditor>=6.7.0",
]

